--- a/mulam/padma-puranam/chaps.tex
+++ b/mulam/padma-puranam/chaps.tex
@@ -1,5 +1,5 @@
 
-\sect{पञ्चत्रिंशोऽध्यायः 1.35}
+\sect{पञ्चत्रिंशोऽध्यायः}
 
 \uvacha{भीष्म उवाच}
 
@@ -417,7 +417,7 @@
 
 {॥इति श्रीपाद्मपुराणे प्रथमे सृष्टिखण्डे शूद्रतापसवधो नाम पञ्चत्रिंशोऽध्यायः॥३५॥}
 
-\sect{षट्त्रिंशोऽध्यायः 1.36}
+\sect{षट्त्रिंशोऽध्यायः}
 
 \uvacha{पुलस्त्य उवाच}
 
@@ -951,7 +951,7 @@
 
 {॥इति श्रीपाद्मपुराणे प्रथमे सृष्टिखण्डे रामागस्त्यसंवादो नाम षट्त्रिंशोऽध्यायः॥३६॥}
 
-\sect{सप्तत्रिंशोऽध्यायः 1.37}
+\sect{सप्तत्रिंशोऽध्यायः}
 
 \uvacha{पुलस्त्य उवाच}
 
@@ -2464,7 +2464,7 @@
 ===
 
 
-\sect{प्रथमोऽध्यायः 5.1}
+\sect{प्रथमोऽध्यायः}
 
 \twolineshloka
 {नारायणं नमस्कृत्य नरं चैव नरोत्तमम्}
@@ -2648,7 +2648,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथस्य भरतावासनन्दिग्रामदर्शनो नाम प्रथमोऽध्यायः॥१॥}
 
-\sect{द्वितीयोऽध्यायः 5.2}
+\sect{द्वितीयोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -2817,7 +2817,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे रामाश्वमेधे शेषवात्स्यायनसंवादे रामराजधानीदर्शनो नाम द्वितीयोऽध्यायः॥२॥}
 
-\sect{तृतीयोऽध्यायः 5.3}
+\sect{तृतीयोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -2967,7 +2967,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथस्य पुरप्रवेशनं नाम तृतीयोऽध्यायः॥३॥}
 
-\sect{चतुर्थोऽध्यायः 5.4}
+\sect{चतुर्थोऽध्यायः}
 
 \uvacha{वात्स्यायन उवाच}
 
@@ -3198,7 +3198,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुवरस्य राज्याभिषेको नाम चतुर्थोऽध्यायः॥४॥}
 
-\sect{पञ्चमोऽध्यायः 5.5}
+\sect{पञ्चमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -3414,7 +3414,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे अगस्त्यसमागमो नाम पञ्चमोऽध्यायः॥५॥}
 
-\sect{षष्ठोऽध्यायः 5.6}
+\sect{षष्ठोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -3600,7 +3600,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रावणोत्पत्तिर्नाम षष्ठोऽध्यायः॥६॥}
 
-\sect{सप्तमोऽध्यायः 5.7}
+\sect{सप्तमोऽध्यायः}
 
 \uvacha{अगस्त्य उवाच}
 
@@ -3758,7 +3758,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रावणोत्पत्तिविपत्तिकथनन्नामसप्तमोऽध्यायः॥७॥}
 
-\sect{अष्टमोऽध्यायः 5.8}
+\sect{अष्टमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -3922,7 +3922,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथस्यागस्त्योपदेशोनामाष्टमोऽध्यायः॥८॥}
 
-\sect{नवमोऽध्यायः 5.9}
+\sect{नवमोऽध्यायः}
 
 \uvacha{श्रीराम उवाच}
 
@@ -4194,7 +4194,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सर्वधर्मोपदेशो नाम नवमोऽध्यायः॥९॥}
 
-\sect{दशमोऽध्यायः 5.10}
+\sect{दशमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -4509,7 +4509,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नशिक्षाकथनं नाम दशमोऽध्यायः॥१०॥}
 
-\sect{एकादशोऽध्यायः 5.11}
+\sect{एकादशोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -4855,7 +4855,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे हयमोचनपुष्कलभार्यासमागमो नाम एकादशोऽध्यायः॥११॥}
 
-\sect{द्वादशोऽध्यायः 5.12}
+\sect{द्वादशोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -4873,7 +4873,7 @@
 
 \twolineshloka
 {परमायोधने कान्त स्मर्तव्याहं न जातुचित्}
-{सत्यां मयि तव स्वान्ते युद्धे 3विजयसंशयः}% ४
+{सत्यां मयि तव स्वान्ते युद्धे विजयसंशयः}% ४
 
 \twolineshloka
 {पद्मनेत्र तथा कार्यमूर्मिलाद्या यथा मम}
@@ -5222,7 +5222,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे कामाक्षोपाख्यानं नाम द्वादशोऽध्यायः॥१२॥}
 
-\sect{त्रयोदशोऽध्यायः 5.13}
+\sect{त्रयोदशोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -5497,7 +5497,7 @@
 {व्याप्नोति स्म महाराज सुमदेन प्रणोदितः}% ६३
 
 \fourlineindentedshloka
-{कन्याः समागत्य महानरेन्द्रं -}
+{कन्याः समागत्य महानरेन्द्रं-}
 {शत्रुघ्नमिन्द्रादिकसेविताङ्घ्रिम्}
 {करिस्थिता मौक्तिकवृन्दसङ्घै-}
 {र्वर्धापयामासुरिनप्रयुक्ताः}% ६४
@@ -5516,7 +5516,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नाहिच्छत्रापुरीप्रवेशो नाम त्रयोदशोऽध्यायः॥१३॥}
 
-\sect{चतुर्दशोऽध्यायः 5.14}
+\sect{चतुर्दशोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -5792,7 +5792,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे च्यवनोपाख्यानं नाम चतुर्दशोऽध्यायः॥१४॥}
 
-\sect{पञ्चदशोऽध्यायः 5.15}
+\sect{पञ्चदशोऽध्यायः}
 
 \uvacha{सुमतिरुवाच}
 
@@ -6040,7 +6040,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे च्यवनस्य तपोभोगवर्णनं नाम पञ्चदशोऽध्यायः॥१५॥}
 
-\sect{षोडशोऽध्यायः 5.16}
+\sect{षोडशोऽध्यायः}
 
 \uvacha{सुमतिरुवाच}
 
@@ -6269,7 +6269,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे च्यवनाश्रमे हयगमनो नाम षोडशोऽध्यायः॥१६॥}
 
-\sect{सप्तदशोऽध्यायः 5.17}
+\sect{सप्तदशोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -6611,7 +6611,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे ब्राह्मणसमागमो नाम सप्तदशोऽध्यायः॥१७॥}
 
-\sect{अष्टादशोऽध्यायः 5.18}
+\sect{अष्टादशोऽध्यायः}
 
 \uvacha{ब्राह्मण उवाच}
 
@@ -6741,7 +6741,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे ब्राह्मणोपदेशोनामाष्टादशोऽध्यायः॥१८॥}
 
-\sect{ऊनविंशोऽध्यायः 5.19}
+\sect{ऊनविंशोऽध्यायः}
 
 \uvacha{ब्राह्मण उवाच}
 
@@ -6993,7 +6993,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रत्नग्रीवस्य तीर्थप्रयाणन्नामैकोनविंशोऽध्यायः॥१९॥}
 
-\sect{विंशोऽध्यायः 5.20}
+\sect{विंशोऽध्यायः}
 
 \uvacha{सुमतिरुवाच}
 
@@ -7374,7 +7374,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे रामाश्वमेधे शेषवात्स्यायनसंवादे गण्डकीमाहात्म्यं नाम विंशोऽध्यायः॥२०॥}
 
-\sect{एकविंशोऽध्यायः 5.21}
+\sect{एकविंशोऽध्यायः}
 
 \uvacha{सुमतिरुवाच}
 
@@ -7580,7 +7580,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सन्न्यासिदर्शनं नाम एकविंशोऽध्यायः॥२१॥}
 
-\sect{द्वाविंशोऽध्यायः 5.22}
+\sect{द्वाविंशोऽध्यायः}
 
 \uvacha{सुमतिरुवाच}
 
@@ -7845,7 +7845,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे नीलगिरिमहिमवर्णनं नाम द्वाविंशोऽध्यायः॥२२॥}
 
-\sect{त्रयोविंशोऽध्यायः 5.23}
+\sect{त्रयोविंशोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -8150,7 +8150,7 @@
 {परब्रह्मेव सर्वत्र व्याप्ताश्चान्तरगोचराः}% ७४
 
 \fourlineindentedshloka
-{तं राजपुत्रं शितबाणकोटिभि -}
+{तं राजपुत्रं शितबाणकोटिभि-}
 {र्व्याप्तं विधायाशु जगर्ज विक्रमी}
 {संहर्षयन्स्वीयगणान्परान्महान्}
 {कुर्वन्हृदा शून्यतमान्गतासुकान्}% ७५
@@ -8211,7 +8211,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे राजपुत्रयुद्धकथनं नाम त्रयोविंशोऽध्यायः॥२३॥}
 
-\sect{चतुर्विंशतितमोऽध्यायः 5.24}
+\sect{चतुर्विंशतितमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -8459,7 +8459,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे पुष्कलविजयो नाम चतुर्विंशतितमोऽध्यायः॥२४॥}
 
-\sect{पञ्चविंशोऽध्यायः 5.25}
+\sect{पञ्चविंशोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -8607,7 +8607,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुबाहुसैन्यसमागमो नाम पञ्चविंशोऽध्यायः॥२५॥}
 
-\sect{षड्विंशतितमोऽध्यायः 5.26}
+\sect{षड्विंशतितमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -8902,7 +8902,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे गदायुद्धं नाम षड्विंशतितमोऽध्यायः॥२६॥}
 
-\sect{सप्तविंशतितमोऽध्यायः 5.27}
+\sect{सप्तविंशतितमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -9104,7 +9104,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे चित्राङ्गवधो नाम सप्तविंशतितमोऽध्यायः॥२७॥}
 
-\sect{अष्टाविंशतितमोऽध्यायः 5.28}
+\sect{अष्टाविंशतितमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -9412,7 +9412,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुबाहुपराजयो नाम अष्टाविंशतितमोऽध्यायः॥२८॥}
 
-\sect{एकोनत्रिंशत्तमोऽध्यायः 5.29}
+\sect{एकोनत्रिंशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -9642,7 +9642,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नस्य सुबाहुना सह निर्याणं नाम एकोनत्रिंशत्तमोऽध्यायः॥२९॥}
 
-\sect{त्रिंशोऽध्यायः 5.30}
+\sect{त्रिंशोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -9982,7 +9982,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सत्यवदाख्याने जनकेन नरकस्थप्राणिमोचनं नाम त्रिंशोऽध्यायः॥३०॥}
 
-\sect{एकत्रिंशोऽध्यायः 5.31}
+\sect{एकत्रिंशोऽध्यायः}
 
 \uvacha{जाबालिरुवाच}
 
@@ -10230,7 +10230,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सत्यवदाख्याने धेनुव्रतवर्णनं नाम एकत्रिंशोऽध्यायः॥३१॥}
 
-\sect{द्वात्रिंशोऽध्यायः 5.32}
+\sect{द्वात्रिंशोऽध्यायः}
 
 \uvacha{सुमतिरुवाच}
 
@@ -10344,7 +10344,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सत्यवत्समागमो नाम द्वात्रिंशोऽध्यायः॥३२॥}
 
-\sect{त्रयस्त्रिंशत्तमोऽध्यायः 5.33}
+\sect{त्रयस्त्रिंशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -10610,7 +10610,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरप्रतिज्ञाकथनं नाम त्रयस्त्रिंशत्तमोऽध्यायः॥३३॥}
 
-\sect{चतुस्त्रिंशत्तमोऽध्यायः 5.34}
+\sect{चतुस्त्रिंशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -10944,7 +10944,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे विद्युन्मालिनामराक्षसपराजयो नाम चतुस्त्रिंशत्तमोऽध्यायः॥३४॥}
 
-\sect{पञ्चत्रिंशत्तमोऽध्यायः 5.35}
+\sect{पञ्चत्रिंशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -11248,7 +11248,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे आरण्यको पाख्याने लोमशारण्यकसंवादो नाम पञ्चत्रिंशत्तमोऽध्यायः॥३५॥}
 
-\sect{षट्त्रिंशत्तमोऽध्यायः 5.36}
+\sect{षट्त्रिंशत्तमोऽध्यायः}
 
 \uvacha{शेषउवाच}
 
@@ -11630,7 +11630,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे लोमशारण्यकसंवादे रामचरित्रकथनं नाम षट्त्रिंशत्तमोऽध्यायः॥३६॥}
 
-\sect{सप्तत्रिंशत्तमोऽध्यायः 5.37}
+\sect{सप्तत्रिंशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -11910,7 +11910,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे आरण्यकमुनेर्विष्णुलोकगमनं नाम सप्तत्रिंशत्तमोऽध्यायः॥३७॥}
 
-\sect{अष्टत्रिंशत्तमोऽध्यायः 5.38}
+\sect{अष्टत्रिंशत्तमोऽध्यायः}
 
 \uvacha{सूत उवाच}
 
@@ -12131,7 +12131,7 @@
 \fourlineindentedshloka
 {तथापि याचे वरमेकमुत्तमं}
 {विधेहि तन्मे मनसः समीहितम्}
-{भवे भवे नो रघुनायकः पति -}
+{भवे भवे नो रघुनायकः पति-}
 {र्वयं च तत्कर्मकराश्च किङ्कराः}% ५१
 
 \twolineshloka
@@ -12184,7 +12184,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नस्य योगिनीदर्शनजलमध्याद्वाहप्राप्तिर्नाम अष्टत्रिंशत्तमोऽध्यायः॥३८॥}
 
-\sect{एकोनचत्वारिंशत्तमोऽध्यायः 5.39}
+\sect{एकोनचत्वारिंशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -12279,7 +12279,7 @@
 {दृष्ट्वा स्त्रियः परमकौतुकधामदेहम्}% २२
 
 \fourlineindentedshloka
-{ऊचुः पतिं कमलमध्यपिशङ्गवर्णा -}
+{ऊचुः पतिं कमलमध्यपिशङ्गवर्णा-}
 {स्ताम्राधरप्रतिभयाहतविद्रुमाभाः}
 {दन्तव्रजप्रमितहास्यसुशोभिवक्त्राः}
 {कामस्य बाणनयनादिविमोहनाभाः}% २३
@@ -12432,7 +12432,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरमणिपुत्रेण हयग्रहणं नाम एकोनचत्वारिंशत्तमोऽध्यायः॥३९॥}
 
-\sect{चत्वारिंशत्तमोऽध्यायः 5.40}
+\sect{चत्वारिंशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -12688,7 +12688,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरमणिना सह युद्धनिश्चयो नाम चत्वारिंशत्तमोऽध्यायः॥४०॥}
 
-\sect{एकचत्वारिंशत्तमोऽध्यायः 5.41}
+\sect{एकचत्वारिंशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -12828,7 +12828,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रुक्माङ्गदपराजय पुष्कलविजयो नाम एकचत्वारिंशत्तमोऽध्यायः॥४१॥}
 
-\sect{द्विचत्वारिंशत्तमोऽध्यायः 5.42}
+\sect{द्विचत्वारिंशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -13168,7 +13168,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरमणेः पराभवो नाम द्विचत्वारिंशत्तमोऽध्यायः॥४२॥}
 
-\sect{त्रिचत्वारिंशत्तमोऽध्यायः 5.43}
+\sect{त्रिचत्वारिंशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -13424,7 +13424,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे पुष्कलशत्रुघ्नपराजयो नाम त्रिचत्वारिंशत्तमोऽध्यायः॥४३॥}
 
-\sect{चतुश्चत्वारिंशत्तमोऽध्यायः 5.44}
+\sect{चतुश्चत्वारिंशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -13768,7 +13768,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे द्रोणगिरौ देवानां पराजयो नाम चतुश्चत्वारिंशत्तमोऽध्यायः॥४४॥}
 
-\sect{पञ्चचत्वारिंशत्तमोऽध्यायः 5.45}
+\sect{पञ्चचत्वारिंशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -14022,7 +14022,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे श्रीरामसमागमो नाम पञ्चचत्वारिंशत्तमोऽध्यायः॥४५॥}
 
-\sect{षट्चत्वारिंशत्तमोऽध्यायः 5.46}
+\sect{षट्चत्वारिंशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -14188,7 +14188,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे हयप्रस्थानं नाम षट्चत्वारिंशत्तमोऽध्यायः॥४६॥}
 
-\sect{सप्तचत्वारिंशत्तमोऽध्यायः 5.47}
+\sect{सप्तचत्वारिंशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -14428,7 +14428,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शापकीर्तनं नाम सप्तचत्वारिंशत्तमोऽध्यायः॥४७॥}
 
-\sect{अष्टचत्वारिंशत्तमोऽध्यायः 5.48}
+\sect{अष्टचत्वारिंशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -14748,7 +14748,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे रामाश्वमेधे शेषवात्स्यायनसंवादे हयनिर्मुक्तिर्नामाष्टचत्वारिंशत्तमोऽध्यायः॥४८॥}
 
-\sect{एकोनपञ्चाशत्तमोऽध्यायः 5.49}
+\sect{एकोनपञ्चाशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -15035,7 +15035,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुरथराज्ञा हयग्रहणं नाम एकोनपञ्चाशत्तमोऽध्यायः॥४९॥}
 
-\sect{पञ्चाशत्तमोऽध्यायः 5.50}
+\sect{पञ्चाशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -15293,7 +15293,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुरथदूतयोः संवादो नाम पञ्चाशत्तमोऽध्यायः॥५०॥}
 
-\sect{एकपञ्चाशत्तमोऽध्यायः 5.51}
+\sect{एकपञ्चाशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -15593,7 +15593,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे पुष्कलमोचनं नामैकपञ्चाशत्तमोऽध्यायः॥५१॥}
 
-\sect{द्विपञ्चाशत्तमोऽध्यायः 5.52}
+\sect{द्विपञ्चाशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -15881,7 +15881,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुरथविजयो नाम द्विपञ्चाशत्तमोऽध्यायः॥५२॥}
 
-\sect{त्रिपञ्चाशत्तमोऽध्यायः 5.53}
+\sect{त्रिपञ्चाशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -15934,7 +15934,7 @@
 \fourlineindentedshloka
 {इत्युक्तमाकर्ण्य समीरजस्तदा}
 {सुबद्धमात्मानमवेक्ष्य वीरान्}
-{सम्मूर्च्छिताञ्छत्रुशराभिघात -}
+{सम्मूर्च्छिताञ्छत्रुशराभिघात-}
 {पीडायुतान्बन्धनमुक्तये स्मरत्}% १२
 
 \twolineshloka
@@ -15958,13 +15958,13 @@
 \fourlineindentedshloka
 {त्वं यागकर्मनिरतोऽसि मुनीश्वरेन्द्रै}
 {र्धर्मं विचारयसि भूमिपतीड्यपाद}
-{अत्राहमद्य सुरथेन विगाढपाश -}
+{अत्राहमद्य सुरथेन विगाढपाश-}
 {बद्धोस्मि मोचय महापुरुषाशु देव}% १६
 
 \fourlineindentedshloka
 {नो मोचयस्यथ यदि स्मरणातिरेकात्}
 {त्वं सर्वदेववरपूजितपादपद्म}
-{लोको भवन्तमिदमुल्लसितोऽहसिष्य -}
+{लोको भवन्तमिदमुल्लसितोऽहसिष्य-}
 {त्तस्माद्विलम्बमिह माचर मोचयाशु}% १७
 
 \twolineshloka
@@ -16050,7 +16050,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथसमागमो नाम त्रिपञ्चाशत्तमोऽध्यायः॥५३॥}
 
-\sect{चतुःपञ्चाशत्तमोऽध्यायः 5.54}
+\sect{चतुःपञ्चाशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -16208,7 +16208,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे लवेन हयबन्धनं नाम चतुःपञ्चाशत्तमोऽध्यायः॥५४॥}
 
-\sect{पञ्चपञ्चाशत्तमोऽध्यायः 5.55}
+\sect{पञ्चपञ्चाशत्तमोऽध्यायः}
 
 \uvacha{व्यास उवाच}
 
@@ -16540,7 +16540,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे चारनिरीक्षणं नाम पञ्चपञ्चाशत्तमोऽध्यायः॥५५॥}
 
-\sect{षट्पञ्चाशत्तमोऽध्यायः 5.56}
+\sect{षट्पञ्चाशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -16810,7 +16810,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे भरतवाक्यं नाम षट्पञ्चाशत्तमोऽध्यायः॥५६॥}
 
-\sect{सप्तपञ्चाशत्तमोऽध्यायः 5.57}
+\sect{सप्तपञ्चाशत्तमोऽध्यायः}
 
 \uvacha{वात्स्यायन उवाच}
 
@@ -17099,7 +17099,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रजकप्राग्जन्मकथनन्ना सप्तपञ्चाशत्तमोऽध्यायः॥५७॥}
 
-\sect{अष्टपञ्चाशत्तमोऽध्यायः 5.58}
+\sect{अष्टपञ्चाशत्तमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -17428,7 +17428,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे जानक्या गङ्गादर्शनं नाम अष्टपञ्चाशत्तमोऽध्यायः॥५८॥}
 
-\sect{एकोनषष्टितमोऽध्यायः 5.59}
+\sect{एकोनषष्टितमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -17784,7 +17784,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे कुशलवोत्पत्तिकथानकन्नामैकोनषष्टितमोऽध्यायः॥५९॥}
 
-\sect{षष्टितमोऽध्यायः 5.60}
+\sect{षष्टितमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -18063,7 +18063,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे कुशलवयुद्धे सैन्यपराजय कालजित्सेनानीमरणं नाम षष्टितमोऽध्यायः॥६०॥}
 
-\sect{एकषष्टितमोऽध्यायः 5.61}
+\sect{एकषष्टितमोऽध्यायः}
 
 \uvacha{शत्रुघ्न उवाच}
 
@@ -18321,7 +18321,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे हनुमत्पतनन्नामैकषष्टितमोऽध्यायः॥६१॥}
 
-\sect{द्विषष्टितमोऽध्यायः 5.62}
+\sect{द्विषष्टितमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -18515,7 +18515,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे लवमूर्च्छा नाम द्विषष्टितमोऽध्यायः॥६२॥}
 
-\sect{त्रिषष्टितमोऽध्यायः 5.63}
+\sect{त्रिषष्टितमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -18852,7 +18852,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नमूर्च्छने कुशजयो नाम त्रिषष्टितमोऽध्यायः॥६३॥}
 
-\sect{चतुःषष्टितमोऽध्यायः 5.64}
+\sect{चतुःषष्टितमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -19182,7 +19182,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सैन्यजीवनं नाम चतुःषष्टितमोऽध्यायः॥६४॥}
 
-\sect{पञ्चषष्टितमोऽध्यायः 5.65}
+\sect{पञ्चषष्टितमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -19512,7 +19512,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुमतिनिवेदनं नाम पञ्चषष्टितमोऽध्यायः॥६५॥}
 
-\sect{षट्षष्टितमोऽध्यायः 5.66}
+\sect{षट्षष्टितमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -20270,7 +20270,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रामायणगानं नाम षट्षष्टितमोऽध्यायः॥६६॥}
 
-\sect{सप्तषष्टितमोऽध्यायः 5.67}
+\sect{सप्तषष्टितमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -20624,7 +20624,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे यज्ञप्रारम्भो नाम सप्तषष्टितमोऽध्यायः॥६७॥}
 
-\sect{अष्टषष्टितमोऽध्यायः 5.68}
+\sect{अष्टषष्टितमोऽध्यायः}
 
 \uvacha{शेष उवाच}
 
@@ -20785,7 +20785,7 @@
 
 ===
 
-\sect{द्विचत्वारिंशदधिक द्विशततमोऽध्यायः 6.242}
+\sect{द्विचत्वारिंशदधिक द्विशततमोऽध्यायः}
 
 \uvacha{रुद्र उवाच}
 
@@ -22367,7 +22367,7 @@
 
 {॥इति श्रीपाद्मे महापुराणे पञ्चपञ्चाशत्साहस्र्यां संहितायामुत्तरखण्डे उमामहेश्वरसंवाद रामस्यायोध्याप्रवेशो नाम द्विचत्वारिंशदधिकद्विशततमोऽध्यायः॥२४२॥}
 
-\sect{त्रिचत्वारिंशदधिक द्विशततमोऽध्यायः 6.243}
+\sect{त्रिचत्वारिंशदधिक द्विशततमोऽध्यायः}
 
 \uvacha{शङ्कर उवाच}
 
@@ -22598,7 +22598,7 @@
 
 {॥इति श्रीपाद्मे महापुराणे पञ्चपञ्चाशत्साहस्र्यां संहितायामुत्तरखण्डे उमामहेश्वर संवादे विश्वदर्शनं नाम त्रिचत्वारिंशदधिकद्विशततमोऽध्यायः॥२४३॥}
 
-\sect{चतुश्चत्वारिंशदधिक द्विशततमोऽध्यायः 6.244}
+\sect{चतुश्चत्वारिंशदधिक द्विशततमोऽध्यायः}
 
 \uvacha{शङ्कर उवाच}
 
