--- a/mulam/padma-puranam/markandeya-ashrama-darshanam.tex
+++ b/mulam/padma-puranam/markandeya-ashrama-darshanam.tex
@@ -2,11 +2,11 @@
 
 \sect{मार्कण्डेयाश्रमदर्शनम्}
 
-\src{पद्म-पुराणम्}{}{अध्यायः १२३}{}
+\src{पद्म-पुराणम्}{सृष्टिखण्डम्}{अध्यायः ३३}{१--१८५}
 % \tags{concise, complete}
-\notes{This chapter describes}
+\notes{This chapter describes the visit of Rama to the Markandeya Ashrama, the story of Markandeya, and the significance of the Pushkara Tirtha. It also includes a most interesting episode of Rama performing Shrāddha, and Sita actually seeing Dasharatha descended in the Brāhmaṇas.}
 \textlink{https://sa.wikisource.org/wiki/पद्मपुराणम्/खण्डः_१_(सृष्टिखण्डम्)/अध्यायः_३३}
-\translink{}
+\translink{https://www.wisdomlib.org/hinduism/book/the-padma-purana/d/doc364155.html}
 
 \storymeta
 
