--- a/mulam/padma-puranam/pura-kalpa-ramayana-varnanam.tex
+++ b/mulam/padma-puranam/pura-kalpa-ramayana-varnanam.tex
@@ -1,9 +1,13 @@
-===
+\sect{षोडशोत्तरशततमोऽध्यायः}
 
+\src{पद्म-पुराणम्}{सृष्टिखण्डम्}{अध्यायः ३३}{१--१८५}
+% \tags{concise, complete}
+\notes{This chapter describes the Ramayana of another Kalpa, as told by Shiva to Rama, at the request of the latter. A key difference is the absence of Setubandhanam; instead, the army crosses the ocean by meaans of Shiva's massive bow, the Ājagava!}
+\textlink{https://sa.wikisource.org/wiki/पद्मपुराणम्/खण्डः_५_(पातालखण्डः)/अध्यायः_११६}
+\translink{https://www.wisdomlib.org/hinduism/book/the-padma-purana/d/doc365826.html}
 
+\storymeta
 
-
-\sect{षोडशोत्तरशततमोऽध्यायः 5.116}
 
 सूत उवाच-
 
