--- a/mulam/padma-puranam/rama-agastya-samvada.tex
+++ b/mulam/padma-puranam/rama-agastya-samvada.tex
@@ -1,4 +1,13 @@
-\sect{षट्त्रिंशोऽध्यायः}
+\sect{षट्त्रिंशोऽध्यायः --- रामागस्त्यसंवादः}
+
+\src{पद्म-पुराणम्}{सृष्टिखण्डम्}{अध्यायः ३६}{१--१८५}
+% \tags{concise, complete}
+\notes{This chapter describes the conversation between Rama and Agastya. It narrates how Rama, after defeating Ravana, meets Agastya in the forest. Agastya explains the significance of the divine ornaments given to Rama.}
+\textlink{https://sa.wikisource.org/wiki/पद्मपुराणम्/खण्डः_१_(सृष्टिखण्डम्)/अध्यायः_३६}
+\translink{https://www.wisdomlib.org/hinduism/book/the-padma-purana/d/doc364155.html}
+
+\storymeta
+
 
 \uvacha{पुलस्त्य उवाच}
 
