--- a/mulam/padma-puranam/shudra-tapasa-vadha.tex
+++ b/mulam/padma-puranam/shudra-tapasa-vadha.tex
@@ -1,4 +1,14 @@
-\sect{पञ्चत्रिंशोऽध्यायः}
+\sect{पञ्चत्रिंशोऽध्यायः --- शूद्रतापसवधः}
+
+\src{पद्म-पुराणम्}{सृष्टिखण्डम्}{अध्यायः ३६}{१--१८५}
+% \tags{concise, complete}
+\notes{In this chapter, Rama is approached by a grieving brāhmaṇa whose son has died prematurely; learning that the death was due to a śūdra performing severe penance, Rama locates and kills the ascetic Śambūka, sending him to heaven, and the boy comes back to life at the very moment.}
+\textlink{https://sa.wikisource.org/wiki/पद्मपुराणम्/खण्डः_१_(सृष्टिखण्डम्)/अध्यायः_३५}
+\translink{https://www.wisdomlib.org/hinduism/book/the-padma-purana/d/doc364158.html}
+
+\storymeta
+
+
 
 \uvacha{भीष्म उवाच}
 
